[gd_scene load_steps=10 format=3 uid="uid://v07im6ckn0y5"]

[ext_resource type="Texture2D" uid="uid://bwxneirljy70c" path="res://assets/tetrominoes.png" id="1_emvu0"]
[ext_resource type="Script" path="res://TileMap.gd" id="3_8bm6x"]
[ext_resource type="PackedScene" uid="uid://psjnbhu2tahx" path="res://scenes/hud.tscn" id="4_g0x0i"]
[ext_resource type="AudioStream" uid="uid://35px1bnbbyh0" path="res://sounds/08-Game-Over.ogg" id="5_m2gth"]
[ext_resource type="AudioStream" uid="uid://dsn5sblcijre6" path="res://sounds/Video_Game_Players_-_Tetris_Theme_48152782.ogg" id="5_sy1gw"]
[ext_resource type="AudioStream" uid="uid://dkp8amtvap4a" path="res://sounds/Звук-из-блока.ogg" id="6_ejel8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a08xs"]
texture = ExtResource("1_emvu0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_o01qi"]
resource_name = "PreviewLayer"

[sub_resource type="TileSet" id="TileSet_l1uyk"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_a08xs")
sources/2 = SubResource("TileSetScenesCollectionSource_o01qi")

[node name="TileMap" type="TileMap"]
tile_set = SubResource("TileSet_l1uyk")
cell_quadrant_size = 32
format = 2
layer_0/name = "board"
layer_0/tile_data = PackedInt32Array(0, 458752, 0, 65536, 458752, 0, 131072, 458752, 0, 196608, 458752, 0, 262144, 458752, 0, 327680, 458752, 0, 393216, 458752, 0, 458752, 458752, 0, 524288, 458752, 0, 589824, 458752, 0, 655360, 458752, 0, 720896, 458752, 0, 786432, 458752, 0, 851968, 458752, 0, 917504, 458752, 0, 983040, 458752, 0, 1048576, 458752, 0, 1114112, 458752, 0, 1179648, 458752, 0, 1245184, 458752, 0, 1310720, 458752, 0, 1376256, 458752, 0, 1, 458752, 0, 1376257, 458752, 0, 2, 458752, 0, 1376258, 458752, 0, 3, 458752, 0, 1376259, 458752, 0, 4, 458752, 0, 1376260, 458752, 0, 5, 458752, 0, 1376261, 458752, 0, 6, 458752, 0, 1376262, 458752, 0, 7, 458752, 0, 1376263, 458752, 0, 8, 458752, 0, 1376264, 458752, 0, 9, 458752, 0, 1376265, 458752, 0, 10, 458752, 0, 1376266, 458752, 0, 11, 458752, 0, 65547, 458752, 0, 131083, 458752, 0, 196619, 458752, 0, 262155, 458752, 0, 327691, 458752, 0, 393227, 458752, 0, 458763, 458752, 0, 524299, 458752, 0, 589835, 458752, 0, 655371, 458752, 0, 720907, 458752, 0, 786443, 458752, 0, 851979, 458752, 0, 917515, 458752, 0, 983051, 458752, 0, 1048587, 458752, 0, 1114123, 458752, 0, 1179659, 458752, 0, 1245195, 458752, 0, 1310731, 458752, 0, 1376267, 458752, 0, 1310721, 196608, 0, 1310722, 196608, 0, 1310723, 196608, 0, 1310724, 196608, 0, 1310725, 196608, 0, 1310727, 196608, 0, 1310728, 196608, 0, 1310729, 196608, 0, 1310730, 196608, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1179650, 65536, 0, 1114114, 65536, 0, 1048578, 65536, 0, 983042, 65536, 0, 983041, 65536, 0, 1048577, 65536, 0, 1114113, 65536, 0, 1179649, 65536, 0, 1048585, 65536, 0, 1114121, 65536, 0, 1179657, 65536, 0)
layer_1/name = "active"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
script = ExtResource("3_8bm6x")

[node name="HUD" parent="." instance=ExtResource("4_g0x0i")]

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_m2gth")
volume_db = -5.0

[node name="LineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ejel8")
volume_db = -10.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sy1gw")
volume_db = -5.0
autoplay = true

[connection signal="finished" from="BackgroundMusic" to="." method="_on_background_music_finished"]
[connection signal="ready" from="BackgroundMusic" to="." method="_on_audio_stream_player_ready"]
